salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Channel this variation applies to. "All" matches any channel.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>All</fullName><default>true</default><label>All</label></value>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
            <value><fullName>Mobile</fullName><default>false</default><label>Mobile</label></value>
            <value><fullName>Email</fullName><default>false</default><label>Email</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>