salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Content_JSON__c.field-meta.xml
<CustomField>
    <fullName>Content_JSON__c</fullName>
    <description>JSON payload for the variation content. Shape depends on Point_Name. Hero_Banner: {"badge","header_text","body_text","background_image","cta"}. Exit_Intent: {"header_text","body_text","discount_code","discount_value","cta"}.</description>
    <label>Content JSON</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>