salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Created_By_API__c.field-meta.xml
<CustomField>
    <fullName>Created_By_API__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this variation was created programmatically via API rather than manually in Setup.</description>
    <label>Created By API</label>
    <type>Checkbox</type>
</CustomField>