salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Optional end date. Variation is no longer eligible after this timestamp.</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>