salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Only active variations are considered during resolution.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>