salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Point_Name__c.field-meta.xml
<CustomField>
    <fullName>Point_Name__c</fullName>
    <description>The personalization point this variation targets (e.g., Hero_Banner, Exit_Intent_Capture, Product_Recommendations).</description>
    <label>Point Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>