salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Higher number = higher priority. When multiple variations match, the highest-priority one wins. Default variations should use low priority (e.g., 10).</description>
    <label>Priority</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>