salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Segment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Segment_Rules__c</fullName>
    <description>JSON targeting rules. Each key-value pair is a matching condition. All must match for the variation to be eligible. Example: {"utm_source":"tiktok","identity_tier":"known"}. Empty/null = default (matches all visitors).</description>
    <label>Segment Rules</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>