salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Optional start date. Variation is only eligible after this timestamp.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>