salesforce/force-app/main/default/objects/Personalization_Variation__c/fields/Variation_Name__c.field-meta.xml
<CustomField>
    <fullName>Variation_Name__c</fullName>
    <description>Human-readable name for this variation (e.g., "TikTok Glow-Up Hero").</description>
    <label>Variation Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>